fixed paragraph alignment and added more distinctions between sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ h1, h2, h3, h4 {
     text-transform: uppercase;
 }
 
+
 /*-----------------------------------------------------------------------Grid Visual----------------------*/
 /*-.my-container {
         border: 1px solid green;
@@ -66,6 +67,9 @@ h1, h2, h3, h4 {
 
 
 /*-----------------------------------------------------------------------Containers----------------------*/
+.justify-left {
+    text-align: left;
+}
 
 .landing {
     height: 100vh;
@@ -95,6 +99,15 @@ h1, h2, h3, h4 {
     text-align: center;
 
 }
+
+.content-container-grey {
+
+    background-color:  #c7c7c7;
+
+    text-align: center;
+
+}
+
  .container {
      text-align: center;
  }
